src/dcpu16/assembler/Dcpu16AssemlberParser.java
// $ANTLR 3.4 E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g 2012-04-13 02:01:08

package dcpu16.assembler;

import java.util.HashMap;
import java.util.Map;

import dcpu16.common.OpCode;
import dcpu16.common.Operation;
import dcpu16.common.OperationValue;
import dcpu16.common.OpValueCode;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class Dcpu16AssemlberParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "ADD", "AND", "B", "BOR", "C", "COMMA", "DEC_NUMBER", "DIV", "HEX_NUMBER", "I", "IFB", "IFE", "IFG", "IFN", "J", "JSR", "LABEL_DECLARATION", "LABEL_IDENTIFIER", "LEFT_BLOCK_PARENTHESES", "LINE_COMMENT", "MOD", "MUL", "MULTI_LINE_COMMENT", "NEWLINE", "O", "PC", "PEEK", "PLUS", "POP", "PUSH", "RIGHT_BLOCK_PARENTHESES", "SET", "SHL", "SHR", "SP", "SUB", "WS", "X", "XOR", "Y", "Z"
    };

    public static final int EOF=-1;
    public static final int A=4;
    public static final int ADD=5;
    public static final int AND=6;
    public static final int B=7;
    public static final int BOR=8;
    public static final int C=9;
    public static final int COMMA=10;
    public static final int DEC_NUMBER=11;
    public static final int DIV=12;
    public static final int HEX_NUMBER=13;
    public static final int I=14;
    public static final int IFB=15;
    public static final int IFE=16;
    public static final int IFG=17;
    public static final int IFN=18;
    public static final int J=19;
    public static final int JSR=20;
    public static final int LABEL_DECLARATION=21;
    public static final int LABEL_IDENTIFIER=22;
    public static final int LEFT_BLOCK_PARENTHESES=23;
    public static final int LINE_COMMENT=24;
    public static final int MOD=25;
    public static final int MUL=26;
    public static final int MULTI_LINE_COMMENT=27;
    public static final int NEWLINE=28;
    public static final int O=29;
    public static final int PC=30;
    public static final int PEEK=31;
    public static final int PLUS=32;
    public static final int POP=33;
    public static final int PUSH=34;
    public static final int RIGHT_BLOCK_PARENTHESES=35;
    public static final int SET=36;
    public static final int SHL=37;
    public static final int SHR=38;
    public static final int SP=39;
    public static final int SUB=40;
    public static final int WS=41;
    public static final int X=42;
    public static final int XOR=43;
    public static final int Y=44;
    public static final int Z=45;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public Dcpu16AssemlberParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public Dcpu16AssemlberParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return Dcpu16AssemlberParser.tokenNames; }
    public String getGrammarFileName() { return "E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g"; }


    /* Map label name to OperationValue */
    Map<String,OperationValue> unidentifiedLabels = new HashMap<String,OperationValue>();
    Map<String,OperationValue> identifiedLabels = new HashMap<String,OperationValue>();
    Map<String,Operation> labelOperationMap = new HashMap<String,Operation>();

    /* For the label value */
    int wordCount = 0;



    // $ANTLR start "assembler_file"
    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:70:1: assembler_file returns [List<Operation> outputList] : stmts= statements EOF ;
    public final List<Operation> assembler_file() throws RecognitionException {
        List<Operation> outputList = null;


        List<Operation> stmts =null;


        try {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:71:5: (stmts= statements EOF )
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:71:9: stmts= statements EOF
            {
            pushFollow(FOLLOW_statements_in_assembler_file349);
            stmts=statements();

            state._fsp--;


            match(input,EOF,FOLLOW_EOF_in_assembler_file351); 


                            //Determine the real values of the labels (somewhat complicated to use short form labels)
                            boolean needsLabelSizeCheck = true;
                            while(needsLabelSizeCheck) {
                                needsLabelSizeCheck = false;
                                int currentWordCount = 0;
                                for(Operation stmt : stmts) {
                                    if(stmt.hasLabel()) {
                                        String label = stmt.getLabel();
                                        OperationValue operationValue = identifiedLabels.get(label);
                                        int labelAdressValue = operationValue.getLiteral();
                                        if(labelAdressValue != currentWordCount) {
                                            System.err.println("Adjusting label: "+ label +" from "+ labelAdressValue +" to "+ currentWordCount);
                                            if(labelAdressValue < OpValueCode.LITERAL_OFFSET.code) {
                                                operationValue.set(OpValueCode.LITERAL_OFFSET, currentWordCount);
                                            }
                                            else {
                                                operationValue.set(OpValueCode.NEXT_WORD, currentWordCount);
                                            }
                                            needsLabelSizeCheck = true;
                                        }
                                    }
                                    currentWordCount += stmt.wordCount();
                                }
                            }
                            outputList = stmts;
                        

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return outputList;
    }
    // $ANTLR end "assembler_file"



    // $ANTLR start "statements"
    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:101:1: statements returns [List<Operation> valueList] : (s1= statement NEWLINE | ( WS )? NEWLINE )+ (s2= statement )? ;
    public final List<Operation> statements() throws RecognitionException {
        List<Operation> valueList = null;


        Operation s1 =null;

        Operation s2 =null;



                        valueList = new ArrayList<Operation>();
                    
        try {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:5: ( (s1= statement NEWLINE | ( WS )? NEWLINE )+ (s2= statement )? )
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:9: (s1= statement NEWLINE | ( WS )? NEWLINE )+ (s2= statement )?
            {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:9: (s1= statement NEWLINE | ( WS )? NEWLINE )+
            int cnt2=0;
            loop2:
            do {
                int alt2=3;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:10: s1= statement NEWLINE
            	    {
            	    pushFollow(FOLLOW_statement_in_statements408);
            	    s1=statement();

            	    state._fsp--;


            	     valueList.add(s1); 

            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_statements412); 

            	    }
            	    break;
            	case 2 :
            	    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:56: ( WS )? NEWLINE
            	    {
            	    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:56: ( WS )?
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==WS) ) {
            	        alt1=1;
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:56: WS
            	            {
            	            match(input,WS,FOLLOW_WS_in_statements416); 

            	            }
            	            break;

            	    }


            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_statements419); 

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:72: (s2= statement )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0 >= ADD && LA3_0 <= AND)||LA3_0==BOR||LA3_0==DIV||(LA3_0 >= IFB && LA3_0 <= IFN)||(LA3_0 >= JSR && LA3_0 <= LABEL_DECLARATION)||(LA3_0 >= MOD && LA3_0 <= MUL)||(LA3_0 >= SET && LA3_0 <= SHR)||(LA3_0 >= SUB && LA3_0 <= WS)||LA3_0==XOR) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:105:72: s2= statement
                    {
                    pushFollow(FOLLOW_statement_in_statements425);
                    s2=statement();

                    state._fsp--;


                    }
                    break;

            }


             valueList.add(s2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return valueList;
    }
    // $ANTLR end "statements"



    // $ANTLR start "statement"
    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:108:1: statement returns [Operation value] : ( WS )? (lbl= label_declaration WS ( ( NEWLINE )+ WS )* )? op= operation ( WS )? ;
    public final Operation statement() throws RecognitionException {
        Operation value = null;


        String lbl =null;

        Operation op =null;


        try {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:5: ( ( WS )? (lbl= label_declaration WS ( ( NEWLINE )+ WS )* )? op= operation ( WS )? )
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:9: ( WS )? (lbl= label_declaration WS ( ( NEWLINE )+ WS )* )? op= operation ( WS )?
            {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:9: ( WS )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==WS) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:9: WS
                    {
                    match(input,WS,FOLLOW_WS_in_statement451); 

                    }
                    break;

            }


            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:13: (lbl= label_declaration WS ( ( NEWLINE )+ WS )* )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==LABEL_DECLARATION) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:14: lbl= label_declaration WS ( ( NEWLINE )+ WS )*
                    {
                    pushFollow(FOLLOW_label_declaration_in_statement457);
                    lbl=label_declaration();

                    state._fsp--;


                    match(input,WS,FOLLOW_WS_in_statement459); 

                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:39: ( ( NEWLINE )+ WS )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==NEWLINE) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:40: ( NEWLINE )+ WS
                    	    {
                    	    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:40: ( NEWLINE )+
                    	    int cnt5=0;
                    	    loop5:
                    	    do {
                    	        int alt5=2;
                    	        int LA5_0 = input.LA(1);

                    	        if ( (LA5_0==NEWLINE) ) {
                    	            alt5=1;
                    	        }


                    	        switch (alt5) {
                    	    	case 1 :
                    	    	    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:40: NEWLINE
                    	    	    {
                    	    	    match(input,NEWLINE,FOLLOW_NEWLINE_in_statement462); 

                    	    	    }
                    	    	    break;

                    	    	default :
                    	    	    if ( cnt5 >= 1 ) break loop5;
                    	                EarlyExitException eee =
                    	                    new EarlyExitException(5, input);
                    	                throw eee;
                    	        }
                    	        cnt5++;
                    	    } while (true);


                    	    match(input,WS,FOLLOW_WS_in_statement465); 

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }


            pushFollow(FOLLOW_operation_in_statement473);
            op=operation();

            state._fsp--;


            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:69: ( WS )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==WS) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:109:69: WS
                    {
                    match(input,WS,FOLLOW_WS_in_statement475); 

                    }
                    break;

            }



                            if(lbl != null) {
                                op.setLabel(lbl);
                                labelOperationMap.put(lbl, op); 
                            }
                            value = op;
                            wordCount += op.wordCount();
                        

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "statement"



    // $ANTLR start "operation"
    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:120:1: operation returns [Operation value] : ( basic_operation_code WS ov1= operation_value COMMA ( WS )? ov2= operation_value | non_basic_operation_code WS ov= operation_value );
    public final Operation operation() throws RecognitionException {
        Operation value = null;


        OperationValue ov1 =null;

        OperationValue ov2 =null;

        OperationValue ov =null;

        Dcpu16AssemlberParser.basic_operation_code_return basic_operation_code1 =null;

        Dcpu16AssemlberParser.non_basic_operation_code_return non_basic_operation_code2 =null;


        try {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:121:5: ( basic_operation_code WS ov1= operation_value COMMA ( WS )? ov2= operation_value | non_basic_operation_code WS ov= operation_value )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( ((LA10_0 >= ADD && LA10_0 <= AND)||LA10_0==BOR||LA10_0==DIV||(LA10_0 >= IFB && LA10_0 <= IFN)||(LA10_0 >= MOD && LA10_0 <= MUL)||(LA10_0 >= SET && LA10_0 <= SHR)||LA10_0==SUB||LA10_0==XOR) ) {
                alt10=1;
            }
            else if ( (LA10_0==JSR) ) {
                alt10=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;

            }
            switch (alt10) {
                case 1 :
                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:121:9: basic_operation_code WS ov1= operation_value COMMA ( WS )? ov2= operation_value
                    {
                    pushFollow(FOLLOW_basic_operation_code_in_operation517);
                    basic_operation_code1=basic_operation_code();

                    state._fsp--;


                    match(input,WS,FOLLOW_WS_in_operation519); 

                    pushFollow(FOLLOW_operation_value_in_operation523);
                    ov1=operation_value();

                    state._fsp--;


                    match(input,COMMA,FOLLOW_COMMA_in_operation525); 

                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:121:59: ( WS )?
                    int alt9=2;
                    int LA9_0 = input.LA(1);

                    if ( (LA9_0==WS) ) {
                        alt9=1;
                    }
                    switch (alt9) {
                        case 1 :
                            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:121:59: WS
                            {
                            match(input,WS,FOLLOW_WS_in_operation527); 

                            }
                            break;

                    }


                    pushFollow(FOLLOW_operation_value_in_operation532);
                    ov2=operation_value();

                    state._fsp--;



                                    OpCode opcode = OpCode.valueOf((basic_operation_code1!=null?input.toString(basic_operation_code1.start,basic_operation_code1.stop):null));
                                    OperationValue opvalue1 = ov1;
                                    OperationValue opvalue2 = ov2;
                                    
                                    //Some assertions
                                    if(opcode.code > OpCode.BIT_MASK_BASIC) {
                                        throw new RuntimeException("Opcode bigger than "+ OpCode.BIT_MASK_BASIC +", SHOULD NEVER HAPPEN!");
                                    }
                                    else if(opvalue1.getOpvalCode().code > OpValueCode.BIT_MASK) {
                                        throw new RuntimeException("Opvalue1 bigger than "+ OpValueCode.BIT_MASK +", SHOULD NEVER HAPPEN!");
                                    }
                                    else if(opvalue2.getOpvalCode().code > OpValueCode.BIT_MASK) {
                                        throw new RuntimeException("Opvalue2 bigger than "+ OpValueCode.BIT_MASK +", SHOULD NEVER HAPPEN!");
                                    }
                                    value = new Operation(opcode, opvalue1, opvalue2);
                                

                    }
                    break;
                case 2 :
                    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:139:9: non_basic_operation_code WS ov= operation_value
                    {
                    pushFollow(FOLLOW_non_basic_operation_code_in_operation556);
                    non_basic_operation_code2=non_basic_operation_code();

                    state._fsp--;


                    match(input,WS,FOLLOW_WS_in_operation558); 

                    pushFollow(FOLLOW_operation_value_in_operation562);
                    ov=operation_value();

                    state._fsp--;



                                    OpCode opcode = OpCode.valueOf((non_basic_operation_code2!=null?input.toString(non_basic_operation_code2.start,non_basic_operation_code2.stop):null));
                                    OperationValue opvalue = ov;
                                    
                                    //Some assertions
                                    if(opcode.code > OpCode.BIT_MASK_NON_BASIC) {
                                        throw new RuntimeException("Opcode bigger than "+ OpCode.BIT_MASK_NON_BASIC +" (in non-basic operation), SHOULD NEVER HAPPEN!");
                                    }
                                    else if(opvalue.getOpvalCode().code > OpValueCode.BIT_MASK) {
                                        throw new RuntimeException("Opvalue1 bigger than "+ OpValueCode.BIT_MASK +" (in non-basic operation), SHOULD NEVER HAPPEN!");
                                    }
                                    value = new Operation(opcode, opvalue);
                                

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return value;
    }
    // $ANTLR end "operation"


    public static class basic_operation_code_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "basic_operation_code"
    // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:155:1: basic_operation_code : ( SET | ADD | SUB | MUL | DIV | MOD | SHL | SHR | AND | BOR | XOR | IFE | IFN | IFG | IFB );
    public final Dcpu16AssemlberParser.basic_operation_code_return basic_operation_code() throws RecognitionException {
        Dcpu16AssemlberParser.basic_operation_code_return retval = new Dcpu16AssemlberParser.basic_operation_code_return();
        retval.start = input.LT(1);


        try {
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:156:5: ( SET | ADD | SUB | MUL | DIV | MOD | SHL | SHR | AND | BOR | XOR | IFE | IFN | IFG | IFB )
            // E:\\utwente\\eclipse\\funstuff\\DCPU16\\src\\dcpu16\\assembler\\Dcpu16Assemlber.g:
            {
            if ( (input.LA(1) >= ADD && input.LA(1) <= AND)||input.LA(1)==BOR||input.LA(1)==DIV||(input.LA(1) >= IFB && input.LA(1) <= IFN)||(input.LA(1) >= MOD && input.LA(1) <= MUL)||(input.LA(1) >= SET && input.LA(1) <= SHR)||input.LA(1)==SUB||input.LA(1)==XOR ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "basic_operation_code"


    public static class non_basic_operation_code_return extends ParserRuleReturnScope {
    };

